--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- Splash Page -->
-        <div class="card" id="spash-page">
+        <div class="card" id="spash-page" hidden>
             <form id="start-form">
                 <div class="selection-container">
                     <!-- 10 Questions Radio Input -->
@@ -61,6 +61,12 @@
                 </div>
             </form>
         </div>
+
+        <!-- Countdown Page -->
+        <div class="card" id="countdown-page">
+            <h1 class="countdown">3</h1>
+        </div>
+
     </div>
     <!-- Script -->
     <script src="script.js"></script>
