number of questions selected from radio input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- Splash Page -->
-        <div class="card" id="spash-page" hidden>
+        <div class="card" id="spash-page">
             <form id="start-form">
                 <div class="selection-container">
                     <!-- 10 Questions Radio Input -->
