--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <!-- Splash Page -->
-        <div class="card" id="spash-page">
+        <div class="card" id="splash-page">
             <form id="start-form">
                 <div class="selection-container">
                     <!-- 10 Questions Radio Input -->
@@ -64,7 +64,7 @@
 
         <!-- Countdown Page -->
         <div class="card" id="countdown-page" hidden>
-            <h1 class="countdown">3</h1>
+            <h1 class="countdown"></h1>
         </div>
 
         <!-- Game Page -->
